add file change

--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
                                 class="ltn__tab-menu ltn__tab-menu-3--- ltn__tab-menu-4 ltn__tab-menu-top-right-- text-uppercase--- text-center">
                                 <div class="nav">
                                     <a class="active show" data-toggle="tab" href="#liton_tab_4_1"><img
-                                            src="img/neighbour/1.jpg" alt="#"></a>
-                                    <a data-toggle="tab" href="#liton_tab_4_2" class=""><img src="img/neighbour/2.jpg"
+                                            src="img/img-slide/31.jpg" alt="#"></a>
+                                    <a data-toggle="tab" href="#liton_tab_4_2" class=""><img src="img/img-slide/44.jpg"
                                             alt="#"></a>
                                     <a data-toggle="tab" href="#liton_tab_4_3" class=""><img src="img/neighbour/3.jpg"
                                             alt="#"></a>
@@ -580,7 +580,7 @@
                                         <div class="row">
                                             <div class="col-lg-8">
                                                 <div class="neighbour-apartments-img">
-                                                    <img src="img/neighbour/1.jpg" alt="#">
+                                                    <img src="img/img-slide/31.jpg" alt="#">
                                                 </div>
                                             </div>
                                             <div class="col-lg-4">
@@ -612,7 +612,7 @@
                                         <div class="row">
                                             <div class="col-lg-8">
                                                 <div class="neighbour-apartments-img">
-                                                    <img src="img/neighbour/2.jpg" alt="#">
+                                                    <img src="img/img-slide/44.jpg" alt="#">
                                                 </div>
                                             </div>
                                             <div class="col-lg-4">
