add file change

--- a/index.html
+++ b/index.html
@@ -419,8 +419,8 @@
                         <div class="ltn__banner-item ltn__banner-style-4 text-color-white bg-image"
                             data-bg="img/gallery/2.jpg">
                             <div class="ltn__banner-info">
-                                <h3><a href="product-details.html"> Apartamentos</a></h3>
-                                <p>Ótimas ofertas disponíveis</p>
+                                <h3><a href="product5-details.html"> Apartamento</a></h3>
+                                <p>Ótima oferta disponívei</p>
                             </div>
                         </div>
                     </div>
@@ -949,7 +949,7 @@
                                                 <i class="icon-call"></i>
                                             </div>
                                             <div class="footer-address-info">
-                                                <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
+                                                <p><a href="tel:+55 48 991740401">+55 48 99174-0106</a></p>
                                             </div>
                                         </li>
                                         <li>
