add file change

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                             data-bg="img/gallery/2.jpg">
                             <div class="ltn__banner-info">
                                 <h3><a href="product5-details.html"> Apartamento</a></h3>
-                                <p>Ótima oferta disponívei</p>
+                                <p>Ótima oferta disponível</p>
                             </div>
                         </div>
                     </div>
@@ -428,8 +428,8 @@
                         <div class="ltn__banner-item ltn__banner-style-4 text-color-white bg-image"
                             data-bg="img/gallery/3.jpg">
                             <div class="ltn__banner-info">
-                                <h3><a href="product-details.html"> Condomínios </a></h3>
-                                <p> Ótimas ofertas disponíveis</p>
+                                <h3><a href="product-details.html"> Condomínio </a></h3>
+                                <p> Ótima oferta disponível</p>
                             </div>
                         </div>
                     </div>
@@ -437,8 +437,8 @@
                         <div class="ltn__banner-item ltn__banner-style-4 text-color-white bg-image"
                             data-bg="img/gallery/7.jpg">
                             <div class="ltn__banner-info">
-                                <h3><a href="product-details.html"> Casas </a></h3>
-                                <p> Otimas ofertas disponíveis</p>
+                                <h3><a href="product-details.html"> Casa</a></h3>
+                                <p> Otima oferta disponível</p>
                             </div>
                         </div>
                     </div>
@@ -446,8 +446,8 @@
                         <div class="ltn__banner-item ltn__banner-style-4 text-color-white bg-image"
                             data-bg="img/gallery/8.jpg">
                             <div class="ltn__banner-info">
-                                <h3><a href="product-details.html"> sitios </a></h3>
-                                <p> Ótimas ofertas disponíveis</p>
+                                <h3><a href="product-details.html">sítio</a></h3>
+                                <p> Ótima oferta disponíveis</p>
                             </div>
                         </div>
                     </div>
@@ -455,8 +455,8 @@
                         <div class="ltn__banner-item ltn__banner-style-4 text-color-white bg-image"
                             data-bg="img/gallery/9.jpg">
                             <div class="ltn__banner-info">
-                                <h3><a href="product-details.html"> Terrenos </a></h3>
-                                <p> Ótimas ofertas disponíveis</p>
+                                <h3><a href="product-details.html">Terreno</a></h3>
+                                <p> Ótima oferta disponível</p>
                             </div>
                         </div>
                     </div>
