add file change

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                             data-bg="img/gallery/8.jpg">
                             <div class="ltn__banner-info">
                                 <h3><a href="product-details.html">sítio</a></h3>
-                                <p> Ótima oferta disponíveis</p>
+                                <p> Ótima oferta disponível</p>
                             </div>
                         </div>
                     </div>
