add file change

--- a/index.html
+++ b/index.html
@@ -469,8 +469,6 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-title-area ltn__section-title-2--- text-center---">
-                            <h6 class="section-subtitle section-subtitle-2--- ltn__secondary-color">Propriedades da área
-                            </h6>
                             <h1 class="section-title">Encontre a casa dos seus sonhos</h1>
                         </div>
                     </div>
@@ -500,7 +498,7 @@
                                 <h6>Ararangua</h6>
                                 <h4>Bairro coloninha</h4>
                                 <div class="search-by-place-btn">
-                                    <a href="product2-details.html">Ver propriedades <i
+                                    <a href="product2-details.html">Ver propriedade<i
                                             class="flaticon-right-arrow"></i></a>
                                 </div>
                             </div>
@@ -515,7 +513,7 @@
                                 <h6>Torres</h6>
                                 <h4>Bairro dos anjos</h4>
                                 <div class="search-by-place-btn">
-                                    <a href="product-details.html">Ver Propriedades <i
+                                    <a href="product-details.html">Ver Propriedade<i
                                             class="flaticon-right-arrow"></i></a>
                                 </div>
                             </div>
@@ -530,7 +528,7 @@
                                 <h6>Sombrio</h6>
                                 <h4>Avenida getúlio Vargas</h4>
                                 <div class="search-by-place-btn">
-                                    <a href="product3-details.html">Ver propiedade <i
+                                    <a href="product3-details.html">Ver propiedade<i
                                             class="flaticon-right-arrow"></i></a>
                                 </div>
                             </div>
@@ -626,7 +624,7 @@
                                                         <label><span class="ltn__secondary-color">1,500m </span>/ 21
                                                             min</label>
                                                         <div class="search-by-place-brief">
-                                                            <p>Amplo espaço para melhor sua comodidade, excelente
+                                                            <p>Amplo espaço para sua melhor comodidade, excelente
                                                                 localização .</p>
                                                         </div>
                                                         <div class="search-by-place-btn">
@@ -656,7 +654,7 @@
                                                     <div class="search-by-place-info">
                                                         <h4><a href="product4-details.html">Apartamento de luxo</a></h4>
                                                         <div class="search-by-place-brief">
-                                                            <p>Com conforto e elegância</p>
+                                                            <p>Conforto e elegância, o apartamento de luxo é reconhecido pela sofistificação e bom gosto em todos os detalhes</p>
                                                         </div>
                                                         <div class="search-by-place-btn">
                                                             <a href="product4-details.html">Ver detalhes <i
