create product6-details.html change file index.html and create img-slide

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                         <div class="ltn__banner-item ltn__banner-style-4 text-color-white bg-image"
                             data-bg="img/gallery/3.jpg">
                             <div class="ltn__banner-info">
-                                <h3><a href="product-details.html"> Condomínio </a></h3>
+                                <h3><a href="product6-details.html"> Condomínio </a></h3>
                                 <p> Ótima oferta disponível</p>
                             </div>
                         </div>
