create product7-details.html change file in index.html and change file img-slide

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                         <div class="ltn__banner-item ltn__banner-style-4 text-color-white bg-image"
                             data-bg="img/gallery/7.jpg">
                             <div class="ltn__banner-info">
-                                <h3><a href="product-details.html"> Casa</a></h3>
+                                <h3><a href="product7-details.html"> Casa</a></h3>
                                 <p> Otima oferta disponível</p>
                             </div>
                         </div>
