create product8-details.html change file index.html and img-slide

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                         <div class="ltn__banner-item ltn__banner-style-4 text-color-white bg-image"
                             data-bg="img/gallery/8.jpg">
                             <div class="ltn__banner-info">
-                                <h3><a href="product-details.html">sítio</a></h3>
+                                <h3><a href="product8-details.html">sítio</a></h3>
                                 <p> Ótima oferta disponível</p>
                             </div>
                         </div>
