create product9-details.html change file index.html and img-slide

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                         <div class="ltn__banner-item ltn__banner-style-4 text-color-white bg-image"
                             data-bg="img/gallery/9.jpg">
                             <div class="ltn__banner-info">
-                                <h3><a href="product-details.html">Terreno</a></h3>
+                                <h3><a href="product9-details.html">Terreno</a></h3>
                                 <p> Ótima oferta disponível</p>
                             </div>
                         </div>
