--- a/product9-details.html
+++ b/product9-details.html
@@ -247,7 +247,7 @@
                                 <ul>
                                     <li><a href="index.html"><span class="ltn__secondary-color"><i
                                                     class="fas fa-home"></i></span> Home</a></li>
-                                    <li>Detalhes do sítio</li>
+                                    <li>Terrenos</li>
                                 </ul>
                             </div>
                         </div>
@@ -261,8 +261,50 @@
                 <div class="row ltn__image-slider-5-active slick-arrow-1 slick-arrow-1-inner ltn__no-gutter-all">
                     <div class="col-lg-12">
                         <div class="ltn__img-slide-item-4">
-                            <a href="img/img-slide/76.jpg" data-rel="lightcase:myCollection">
-                                <img src="img/img-slide/76.jpg" alt="Image">
+                            <a href="img/img-slide/77.jpg" data-rel="lightcase:myCollection">
+                                <img src="img/img-slide/77.jpg" alt="Image">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="ltn__img-slide-item-4">
+                            <a href="img/img-slide/78.jpg" data-rel="lightcase:myCollection">
+                                <img src="img/img-slide/78.jpg" alt="Image">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="ltn__img-slide-item-4">
+                            <a href="img/img-slide/79.jpg" data-rel="lightcase:myCollection">
+                                <img src="img/img-slide/79.jpg" alt="Image">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="ltn__img-slide-item-4">
+                            <a href="img/img-slide/80.jpg" data-rel="lightcase:myCollection">
+                                <img src="img/img-slide/80.jpg" alt="Image">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="ltn__img-slide-item-4">
+                            <a href="img/img-slide/75.png" data-rel="lightcase:myCollection">
+                                <img src="img/img-slide/75.png" alt="Image">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="ltn__img-slide-item-4">
+                            <a href="img/img-slide/76.png" data-rel="lightcase:myCollection">
+                                <img src="img/img-slide/76.png" alt="Image">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="ltn__img-slide-item-4">
+                            <a href="img/img-slide/77.jpg" data-rel="lightcase:myCollection">
+                                <img src="img/img-slide/77.jpg" alt="Image">
                             </a>
                         </div>
                     </div>
