--- a/index.html
+++ b/index.html
@@ -455,8 +455,7 @@
                         <div class="ltn__banner-item ltn__banner-style-4 text-color-white bg-image"
                             data-bg="img/gallery/9.jpg">
                             <div class="ltn__banner-info">
-                                <h3><a href="product9-details.html">Terreno</a></h3>
-                                <p> Ótima oferta disponível</p>
+                                <h3><a href="product9-details.html">Terrenos disponíveis</a></h3>
                             </div>
                         </div>
                     </div>
