--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                                             <div class="col-lg-4">
                                                 <div class="ltn__search-by-place-item neighbour-apartments-item">
                                                     <div class="search-by-place-img">
-                                                        <a href="product-details.html"><img src="img/product-3/11.png"
+                                                        <a href="product4-details.html"><img src="img/product-3/11.png"
                                                                 alt="#"></a>
                                                     </div>
                                                     <div class="search-by-place-info">
