add file change

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                                 <a href="product1-detaisl.html"><img src="img/product-3/1.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
-                                <h6>São Francisco</h6>
+                                <h6>Torres, Rio Grande do Sul</h6>
                                 <h4>Bairro jardim das avenidas</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product1-detaisl.html">Ver propriedade <i
@@ -653,7 +653,8 @@
                                                     <div class="search-by-place-info">
                                                         <h4><a href="product4-details.html">Apartamento de luxo</a></h4>
                                                         <div class="search-by-place-brief">
-                                                            <p>Conforto e elegância, o apartamento de luxo é reconhecido pela sofistificação e bom gosto em todos os detalhes</p>
+                                                            <p>Conforto e elegância, o apartamento de luxo é reconhecido
+                                                                pela sofistificação e bom gosto em todos os detalhes</p>
                                                         </div>
                                                         <div class="search-by-place-btn">
                                                             <a href="product4-details.html">Ver detalhes <i
@@ -910,7 +911,7 @@
                                 <p>Podemos ajudá-lo a realizar o seu sonho de uma nova casa</p>
                             </div>
                             <div class="btn-wrapper">
-                                <a class="btn btn-effect-3 btn-white" href="service-details.html">Explorar
+                                <a class="btn btn-effect-3 btn-white" href="shop-grid.html">Explorar
                                     propriedades<i class="icon-next"></i></a>
                             </div>
                         </div>
@@ -1038,4 +1039,5 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
