--- a/shop-grid.html
+++ b/shop-grid.html
@@ -288,7 +288,7 @@
                                             <div
                                                 class="ltn__product-item ltn__product-item-4 ltn__product-item-5 text-center---">
                                                 <div class="product-img">
-                                                    <a href="product-details.html"><img src="img/product-3/1.jpg"
+                                                    <a href="product1-detaisl.html"><img src="img/product-3/1.jpg"
                                                             alt="#"></a>
                                                 </div>
                                                 <div class="product-info">
@@ -303,7 +303,7 @@
                                                         <ul>
                                                             <li>
                                                                 <i class="flaticon-pin"></i>
-                                                                    Porto Algre, Rio Grande do Sul</a>
+                                                                    Torres, Rio Grande do Sul</a>
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -339,12 +339,12 @@
                                                         </ul>
                                                     </div>
                                                     <h2 class="product-title"><a href="product-details.html">Casa nova
-                                                            Venesa</a></h2>
+                                                            veneza</a></h2>
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
                                                                 <i class="flaticon-pin"></i>
-                                                                    Sombrio, Santa Catarina</a>
+                                                                    Nova Veneza, Santa Catarina</a>
                                                             </li>
                                                         </ul>
                                                     </div>
