--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
                                                     <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                                     <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                                     <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
-                                                    <li><a href="product-details.html">Detalhes</a></li>
                                                     <li><a href="account.html">Minha conta</a></li>
                                                 </ul>
                                             </li>
@@ -115,7 +114,6 @@
                                                 <ul class="sub-menu">
                                                     <li><a href="about.html">sobre</a></li>
                                                     <li><a href="service.html">Serviços</a></li>
-                                                    <li><a href="service-details.html">Detalhes</a></li>
                                                     <li><a href="team.html">Equipe</a></li>
                                                     <li><a href="login.html">Conecte-se</a></li>
                                                     <li><a href="history.html">História</a></li>
@@ -479,7 +477,7 @@
                                 <a href="product1-detaisl.html"><img src="img/product-3/1.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
-                                <h6>Torres, Rio Grande do Sul</h6>
+                                <h6>Torres</h6>
                                 <h4>Bairro jardim das avenidas</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product1-detaisl.html">Ver propriedade <i
@@ -509,8 +507,8 @@
                                 <a href="product-details.html"><img src="img/product-3/3.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
-                                <h6>Torres</h6>
-                                <h4>Bairro dos anjos</h4>
+                                <h6>Sombrio</h6>
+                                <h4>Bairro São Francisco</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver Propriedade<i
                                             class="flaticon-right-arrow"></i></a>
@@ -524,8 +522,8 @@
                                 <a href="product3-details.html"><img src="img/product-3/5.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
-                                <h6>Sombrio</h6>
-                                <h4>Avenida getúlio Vargas</h4>
+                                <h6>Campinas</h6>
+                                <h4>Bairro São Bernardo</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product3-details.html">Ver propiedade<i
                                             class="flaticon-right-arrow"></i></a>
