--- a/contact.html
+++ b/contact.html
@@ -87,16 +87,14 @@
                                                 <li><a href="about.html">Sobre</a></li>
                                                 <li><a href="service.html">Serviços</a></li>
                                                 <li><a href="team.html">Equipe</a></li>
-                                                <li><a href="locations.html">locais do mapa do Google</a></li>
                                             </ul>
                                         </li>
                     
                                         <li><a href="#">Comprar</a>
                                             <ul class="sub-menu">
-                                                <li><a href="shop-grid.html">Grade da loja</a></li>
-                                                <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                                                <li><a href="shop-right-sidebar.html">Comprar barra lateral direita</a></li>
-                                                <li><a href="product-details.html">Detalhes da loja</a></li>
+                                                <li><a href="shop-grid.html">Encontrar imóvel</a></li>
+                                                <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                                                <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                                 <li><a href="account.html">Minha conta</a></li>
                                             </ul>
                                         </li>
@@ -107,7 +105,6 @@
                                                 <li><a href="service.html">Serviços</a></li>
                                                 <li><a href="team.html">Equipe</a></li>
                                                 <li><a href="history.html">História</a></li>
-                                                <li><a href="locations.html">Locais no mapa do Google</a></li>
                                                 <li><a href="contact.html">Contato</a></li>
                     
                                             </ul>
@@ -185,16 +182,14 @@
                             <li><a href="about.html">Sobre</a></li>
                             <li><a href="service.html">Serviços</a></li>
                             <li><a href="team.html">Equipe</a></li>
-                            <li><a href="locations.html">locais do mapa do Google</a></li>
                         </ul>
                     </li>
 
                     <li><a href="#">Comprar</a>
                         <ul class="sub-menu">
-                            <li><a href="shop-grid.html">Grade da loja</a></li>
-                            <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                            <li><a href="shop-right-sidebar.html">Comprar barra lateral direita</a></li>
-                            <li><a href="product-details.html"></a>Detalhes da loja</li>
+                            <li><a href="shop-grid.html">Encontrar imóvel</a></li>
+                            <li><a href="shop-left-sidebar.html">Lateral esquerda </a></li>
+                            <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                             <li><a href="account.html">Minha conta</a></li>
                         </ul>
                     </li>
@@ -203,10 +198,8 @@
                         <ul class="sub-menu">
                             <li><a href="about.html">sobre</a></li>
                             <li><a href="service.html">Serviços</a></li>
-                            <li><a href="service-details.html">Detalhes do serviços</a></li>
                             <li><a href="team.html">Equipe</a></li>
                             <li><a href="history.html">História</a></li>
-                            <li><a href="locations.html">Locais no mapa do Google</a></li>
                             <li><a href="contact.html">Contato</a></li>
                         </ul>
                     </li>
