--- a/product9-details.html
+++ b/product9-details.html
@@ -92,7 +92,6 @@
                                                     <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                                     <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                                     <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
-                                                    <li><a href="product-details.html">Detalhes</a></li>
                                                     <li><a href="account.html">Minha conta</a></li>
                                                 </ul>
                                             </li>
@@ -101,7 +100,6 @@
                                                 <ul class="sub-menu">
                                                     <li><a href="about.html">sobre</a></li>
                                                     <li><a href="service.html">Serviços</a></li>
-                                                    <li><a href="service-details.html">Detalhes</a></li>
                                                     <li><a href="team.html">Equipe</a></li>
                                                     <li><a href="login.html">Conecte-se</a></li>
                                                     <li><a href="history.html">História</a></li>
@@ -193,10 +191,8 @@
                             <ul class="sub-menu">
                                 <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                 <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
-                                <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
-                                <li><a href="product-details.html">Detalhes</a></li>
                                 <li><a href="account.html">Minha conta</a></li>
-                                <li><a href="login.html">Entrar</a></li>
+                                <li><a href="login.html">Conecte-se</a></li>
                             </ul>
                         </li>
 
@@ -204,7 +200,6 @@
                             <ul class="sub-menu">
                                 <li><a href="about.html">Sobre</a></li>
                                 <li><a href="service.html">Serviços</a></li>
-                                <li><a href="service-details.html">Detalhes do serviços</a></li>
                                 <li><a href="team.html">Equipe</a></li>
                                 <li><a href="login.html">Conecte-se</a></li>
                                 <li><a href="history.html">História</a></li>
