--- a/shop-right-sidebar.html
+++ b/shop-right-sidebar.html
@@ -89,9 +89,8 @@
                                                 <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                                 <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                                 <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
-                                                <li><a href="product-details.html">Detalhes</a></li>
                                                 <li><a href="account.html">Minha conta</a></li>
-                                                <li><a href="login.html">Entrar</a></li>
+                                                <li><a href="login.html">Conecte-se</a></li>
                                             </ul>
                                         </li>
                                         
@@ -187,9 +186,8 @@
                             <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                             <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                             <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
-                            <li><a href="product-details.html"></a>Detalhes</li>
                             <li><a href="account.html">Minha conta</a></li>
-                            <li><a href="login.html">Entrar</a></li>
+                            <li><a href="login.html">Conecte-se</a></li>
                         </ul>
                     </li>
                     
@@ -197,7 +195,6 @@
                         <ul class="sub-menu">
                             <li><a href="about.html">Sobre</a></li>
                             <li><a href="service.html">Serviços</a></li>
-                            <li><a href="service-details.html">Detalhes do serviços</a></li>
                             <li><a href="team.html">Equipe</a></li>
                             <li><a href="login.html">Conecte-se</a></li>
                             <li><a href="history.html">História</a></li>
