add file change

--- a/product5-details.html
+++ b/product5-details.html
@@ -243,7 +243,7 @@
                                 <ul>
                                     <li><a href="index.html"><span class="ltn__secondary-color"><i
                                                     class="fas fa-home"></i></span> Home</a></li>
-                                    <li>Detalhes do apartamento</li>
+                                    <li>Detalhes da propiedade</li>
                                 </ul>
                             </div>
                         </div>
