--- a/product6-details.html
+++ b/product6-details.html
@@ -243,7 +243,7 @@
                                 <ul>
                                     <li><a href="index.html"><span class="ltn__secondary-color"><i
                                                     class="fas fa-home"></i></span> Home</a></li>
-                                    <li>Detalhes do Condomínio</li>
+                                    <li>Detalhes da propiedade</li>
                                 </ul>
                             </div>
                         </div>
@@ -294,6 +294,13 @@
                         <div class="ltn__img-slide-item-4">
                             <a href="img/img-slide/64.jpg" data-rel="lightcase:myCollection">
                                 <img src="img/img-slide/64.jpg" alt="Image">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="ltn__img-slide-item-4">
+                            <a href="img/img-slide/67.png" data-rel="lightcase:myCollection">
+                                <img src="img/img-slide/67.png" alt="Image">
                             </a>
                         </div>
                     </div>
