--- a/shop-right-sidebar.html
+++ b/shop-right-sidebar.html
@@ -834,7 +834,7 @@
                             <p>Podemos ajudá-lo a realizar o seu sonho de uma nova casa</p>
                         </div>
                         <div class="btn-wrapper">
-                            <a class="btn btn-effect-3 btn-white" href="contact.html">Explorar propriedades <i class="icon-next"></i></a>
+                            <a class="btn btn-effect-3 btn-white" href="shop-grid.html">Explorar propriedades <i class="icon-next"></i></a>
                         </div>
                     </div>
                 </div>
