add file change

--- a/shop-grid.html
+++ b/shop-grid.html
@@ -372,7 +372,7 @@
                                                 <div class="product-info">
                                                     <div class="product-badge">
                                                         <ul>
-                                                            <li class="sale-badg">à venda</li>
+                                                            <li class="sale-badg">Para alugar</li>
                                                         </ul>
                                                     </div>
                                                     <h2 class="product-title"><a href="product-details.html">Casa
@@ -381,7 +381,7 @@
                                                         <ul>
                                                             <li>
                                                                 <i class="flaticon-pin"></i>
-                                                                    Sombrio, Santa Catarina
+                                                                    Tubarão, Santa Catarina
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -397,7 +397,7 @@
                                                 </div>
                                                 <div class="product-info-bottom">
                                                     <div class="product-price">
-                                                        <span>$250.00,00<label></label></span>
+                                                        <span>$1.200,00<label>/Mês</label></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -615,18 +615,18 @@
                                                         <div class="product-badge-price">
                                                             <div class="product-badge">
                                                                 <ul>
-                                                                    <li class="sale-badg">Á venda</li>
+                                                                    <li class="sale-badg">Para alugar</li>
                                                                 </ul>
                                                             </div>
                                                             <div class="product-price">
-                                                                <span>$250.00,00<label></label></span>
+                                                                <span>$1.200,00<label>/Mês</label></span>
                                                             </div>
                                                         </div>
                                                         <h2 class="product-title"><a href="product-details.html">Casa luxuosa</a></h2>
                                                         <div class="product-img-location">
                                                             <ul>
                                                                 <li>
-                                                                    <i class="flaticon-pin"></i> Sombrio, Santa Catarina
+                                                                    <i class="flaticon-pin"></i> Tubarão, Santa Catarina
                                                                 </li>
                                                             </ul>
                                                         </div>
