--- a/index.html
+++ b/index.html
@@ -522,8 +522,8 @@
                                 <a href="product3-details.html"><img src="img/product-3/5.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
-                                <h6>Campinas</h6>
-                                <h4>Bairro São Bernardo</h4>
+                                <h6>Tubarão</h6>
+                                <h4>Centro</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product3-details.html">Ver propiedade<i
                                             class="flaticon-right-arrow"></i></a>
