--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -353,7 +353,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <i class="flaticon-pin"></i> Sombrio, Santa Catarina
+                                                            <i class="flaticon-pin"></i> Tubarão, Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -368,7 +368,7 @@
                                             </div>
                                             <div class="product-info-bottom">
                                                 <div class="product-price">
-                                                    <span>$250.000,00<label></label></span>
+                                                    <span>$1.200,00<label>/Mês</label></span>
                                                 </div>
                                             </div>
                                         </div>
