add file change

--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -440,7 +440,7 @@
                                             </div>
                                             <div class="product-info-bottom">
                                                 <div class="product-price">
-                                                    <span>$1.500,00<label></label></span>
+                                                    <span>$1.500,00<label>/Mês</label></span>
                                                 </div>
                                             </div>
                                         </div>
