add file change

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                                                                 alt="#"></a>
                                                     </div>
                                                     <div class="search-by-place-info">
-                                                        <h4><a href="product2-details.html">Casa luxuosa linda</a></h4>
+                                                        <h4><a href="product2-details.html">Casa linda</a></h4>
                                                         <label><span class="ltn__secondary-color">1,500m </span>/ 21
                                                             min</label>
                                                         <div class="search-by-place-brief">
