add file change

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                                             <div class="col-lg-4">
                                                 <div class="ltn__search-by-place-item neighbour-apartments-item">
                                                     <div class="search-by-place-img">
-                                                        <a href="product-details.html"><img src="img/product-3/2.jpg"
+                                                        <a href="product2-details.html"><img src="img/product-3/2.jpg"
                                                                 alt="#"></a>
                                                     </div>
                                                     <div class="search-by-place-info">
