add file change

--- a/history.html
+++ b/history.html
@@ -543,7 +543,7 @@
                             <p>Podemos ajudá-lo a realizar o seu sonho de uma casa nova</p>
                         </div>
                         <div class="btn-wrapper">
-                            <a class="btn btn-effect-3 btn-white" href="contact.html"><i class="icon-next">Explorar propriedades</i></a>
+                            <a class="btn btn-effect-3 btn-white" href="shop-grid.html"><i class="icon-next">Explorar propriedades</i></a>
                         </div>
                     </div>
                 </div>
