--- a/product-details.html
+++ b/product-details.html
@@ -319,7 +319,7 @@
                                 <p>Podemos ajudá-lo a realizar o seu sonho de uma casa nova</p>
                             </div>
                             <div class="btn-wrapper">
-                                <a class="btn btn-effect-3 btn-white" href="contact.html">Explorar propriedades <i
+                                <a class="btn btn-effect-3 btn-white" href="shop-grid.html">Explorar propriedades <i
                                         class="icon-next"></i></a>
                             </div>
                         </div>
