--- a/register.html
+++ b/register.html
@@ -318,7 +318,7 @@
                             <p>Podemos ajudá-lo a realizar o seu sonho de uma nova casa</p>
                         </div>
                         <div class="btn-wrapper">
-                            <a class="btn btn-effect-3 btn-white" href="product-details.html">Explorar propriedades<i class="icon-next"></i></a>
+                            <a class="btn btn-effect-3 btn-white" href="shop-grid.html">Explorar propriedades<i class="icon-next"></i></a>
                         </div>
                     </div>
                 </div>
