--- a/register.html
+++ b/register.html
@@ -353,7 +353,7 @@
                                             <i class="icon-call"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
+                                            <p><a href="tel:+55 48 991740401">+55 48 99174-0106</a></p>
                                         </div>
                                     </li>
                                     <li>
