add file change

--- a/contact.html
+++ b/contact.html
@@ -254,7 +254,7 @@
                         <div class="ltn__contact-address-icon">
                             <img src="img/icons/10.png" alt="Icon Image">
                         </div>
-                        <h3>Email Address</h3>
+                        <h3>Endereço de email</h3>
                         <p>santos@gmail.com <br>
                             jobs@hotmail.com</p>
                     </div>
@@ -265,7 +265,7 @@
                             <img src="img/icons/11.png" alt="Icon Image">
                         </div>
                         <h3>Número de telefone</h3>
-                        <p>+0123-456789 <br> +987-6543210</p>
+                        <p>+55 48 99174-0106 <br>+55 48 99154-0203</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
