--- a/contact.html
+++ b/contact.html
@@ -434,7 +434,7 @@
                     </div>
                     <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                         <div class="footer-widget footer-menu-widget clearfix">
-                            <h4 class="footer-title">Atendimento ao cliente</h4>
+                            <h4 class="footer-title">Cliente</h4>
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="login.html">Conecte-se</a></li>
