add file change

--- a/about.html
+++ b/about.html
@@ -323,10 +323,10 @@
                                 <img src="img/icons/icon-img/21.png" alt="#">
                             </div>
                             <div class="ltn__feature-info">
-                                <h3><a href="service-details.html">Alugar uma casa</a></h3>
+                                <h3><a href="shop-grid.html">Alugar casa</a></h3>
                                 <p>Casas para alugar disponíveis no site, podemos combinar com você uma casa que você
                                     vai querer chamar de lar.</p>
-                                <a class="ltn__service-btn" href="service-details.html"> Encontre uma casa <i
+                                <a class="ltn__service-btn" href="shop-grid.html"> Encontre uma casa <i
                                         class="flaticon-right-arrow"></i></a>
                             </div>
                         </div>
@@ -337,10 +337,10 @@
                                 <img src="img/icons/icon-img/22.png" alt="#">
                             </div>
                             <div class="ltn__feature-info">
-                                <h3><a href="service-details.html">Venda uma casa</a></h3>
+                                <h3><a href="shop-grid.html">Vender casa</a></h3>
                                 <p>Casas à venda disponíveis no site, podemos combinar com você uma casa que você vai
                                     querer chamar de lar.</p>
-                                <a class="ltn__service-btn" href="service-details.html">Encontre uma casa <i
+                                <a class="ltn__service-btn" href="shop-grid.html">Encontre seu imóvel <i
                                         class="flaticon-right-arrow"></i></a>
                             </div>
                         </div>
@@ -351,10 +351,10 @@
                                 <img src="img/icons/icon-img/23.png" alt="#">
                             </div>
                             <div class="ltn__feature-info">
-                                <h3><a href="service-details.html">Comprar uma casa</a></h3>
+                                <h3><a href="shop-grid.html">Comprar casa</a></h3>
                                 <p>Casas à venda disponíveis no site, podemos combinar com você uma casa que você vai
                                     querer chamar de lar.</p>
-                                <a class="ltn__service-btn" href="service-details.html">Encontre uma casa <i
+                                <a class="ltn__service-btn" href="shop-grid.html">Encontre seu imóvel <i
                                         class="flaticon-right-arrow"></i></a>
                             </div>
                         </div>
